src/styles/global.scss
// @use './fonts';

* {
  box-sizing: border-box;
  margin: 0;
}

:root {
  --font-accent: CabinetGrotesk, -apple-system, BlinkMacSystemFont, 'Segoe UI',
    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

  --color-strongest: hsl(0, 0%, 100%);
  --color-strong: hsl(0, 0%, 75%);
  --color-default: hsl(0, 0%, 55%);
  --color-bg: black;
  --color-modal-bg: rgb(10, 10, 10);
  --color-focus-ring: rgb(0, 173, 239);

  --focus-outline-shorthand: 3px solid var(--color-focus-ring);
  --focus-outline-offset: 2px;

  --margin-body-top: clamp(1rem, 4vh, 3rem);
  --margin-body-bottom: var(--margin-body-top);
  --margin-body-h: clamp(1rem, 1rem + 2.125vw, 2.75rem);
  --margin-h-inset: var(--margin-body-h);

  --max-content-column-width: 48rem;
  --max-element-width: 108rem;

  --scroll-button-diameter: 2.75em;

  --modal-h-margin: 2rem;

  font-family: var(--font-accent);
  font-size: clamp(1rem, 0.5rem + 1.0309vw, 1.0625rem);
  font-weight: 400;
  font-optical-sizing: auto;
  line-height: 1.5;
  color: var(--color-default);
  letter-spacing: 0.025em;
}

:focus-visible {
  outline: var(--focus-outline-shorthand);
  outline-offset: var(--focus-outline-offset);
  border-radius: 2px;
}

.screen-reader-only:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

html {
  background-color: var(--color-bg);
  -webkit-text-size-adjust: none;

  @media (prefers-reduced-motion: no-preference) {
    & {
      scroll-behavior: smooth;
    }
  }
}

body {
  margin: 0;
  min-height: 100vh;
}

noscript p {
  position: sticky;
  top: 0;
  z-index: 1000;
  background-color: yellow;
  color: black;
  text-align: center;
  font-weight: 500;
  font-size: 1.125em;
  padding: 2em;
}

.container {
  display: flex;
  flex-direction: column;
  padding: 0 var(--margin-body-h) var(--margin-body-bottom);
  width: 100%;
  margin: 0 auto;
  max-width: var(--max-content-column-width);
  min-height: 100vh;
}

.initial-view {
  display: flex;
  flex-direction: column;
  padding-top: var(--margin-body-top);
  padding-bottom: var(--margin-body-top);
  margin-bottom: 4rem;
  height: calc(100vh - env(safe-area-inset-bottom));
  height: 100svh;
  justify-content: space-between;
  position: relative;
}

p {
  margin-bottom: 1em;

  footer & {
    font-size: 0.825em;
  }
}

a {
  color: inherit;
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

@keyframes scaleY {
  to {
    transform: scaleY(1);
  }
}

@keyframes slideIntoPosition {
  to {
    transform: translate(0, 0);
  }
}

header.landing {
  padding-bottom: 0.75em;

  h1,
  h2 {
    font-size: 1em;
    font-weight: inherit;
    line-height: 1.4;

    @media (prefers-reduced-motion: no-preference) {
      opacity: 0;
      animation-duration: 2s;
      animation-name: fadeIn;
      animation-fill-mode: forwards;
    }
  }

  h1 {
    color: var(--color-strongest);
    letter-spacing: 0.04em;

    @media (prefers-reduced-motion: no-preference) {
      animation-delay: 1.25s;
    }
  }

  h2 {
    font-family: var(--font-accent);
    letter-spacing: 0.04em;

    @media (prefers-reduced-motion: no-preference) {
      animation-delay: 1.5s;
    }
  }
}

h3 {
  padding: 0.75em 0;
  font-family: var(--font-accent);
  font-weight: 600;
  font-size: 0.8125em;
  text-transform: uppercase;
  letter-spacing: 0.2em;
  color: var(--color-strong);
}

.still {
  display: block;
  margin-bottom: 1em;
  width: 100%;
  height: auto;
}

.portrait {
  display: block;
  margin-bottom: 2em;
  width: 100%;
}

.contact {
  a {
    font-family: var(--font-accent);
    font-weight: 400;
    text-decoration: none;
    color: var(--color-strong);
    padding: 0.5em 0.625em;
    position: relative;
    transition:
      color 0.5s,
      border 0.5s;

    &:hover,
    &:focus {
      color: var(--color-strongest);
    }
  }
}

.social {
  list-style-type: none;
  margin: 0 0 2em;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  a:not(:last-child)::after {
    position: absolute;
    right: -0.125ch;
    content: '·';
    color: var(--color-default);
  }
}

footer {
  margin-left: var(--margin-h-inset);

  p:first-of-type {
    margin-top: 1.5rem;
  }
}

body.home {
  position: relative;

  main.landing {
    // Backdrop that obscures rotating thumbnail backgrounds as you scroll down page
    &::before {
      content: '';
      position: absolute;
      top: 0;
      left: 50%;
      transform: translateX(-50%);
      width: 100vw;
      height: 100%;
      z-index: -1;
    }
  }
}

.section {
  position: relative;

  &::before {
    content: '';
    position: absolute;
    z-index: -1;
    top: 4.95em;
    left: 2px;
    width: 0.5px;
    height: calc(
      100% + clamp(2.5em, 7.5vw, 7.5em) - 3.5em
    ); // clamp() function must be identical to the value set for `article` in Project component
    background-color: var(--color-vertical-rule);
    mix-blend-mode: screen;
  }

  &.top::before {
    top: calc(var(--margin-body-top) + 3.75em);
    height: calc(100% - var(--margin-body-top) - 2.35em);

    @media (prefers-reduced-motion: no-preference) {
      transform: scaleY(0);
      transform-origin: 0 0;
      animation-name: scaleY;
      animation-delay: 2s;
      animation-duration: 1.5s;
      animation-fill-mode: forwards;
      animation-timing-function: ease-in-out;
    }
  }

  .landing &:last-of-type {
    padding-bottom: 8rem;

    &::before {
      height: calc(100% + 3.25rem);
    }
  }
}

.landing .section {
  padding-top: 2rem;
  padding-left: var(--margin-h-inset);
}

.landing h3 {
  margin-left: calc(-1 * var(--margin-h-inset));
  margin-bottom: 3rem;
}

.align-r {
  text-align: right;
}

.bleed {
  margin: 0.25rem 0 0;
  width: 100vw;
  min-width: 100%;
  max-width: min(120vh, var(--max-element-width));
  align-self: center;
}

.bleed-r {
  margin-right: calc(-1 * var(--margin-h-inset));
}

@media (prefers-reduced-motion: no-preference) {
  .video-fade-in {
    opacity: 0;
    animation: fadeIn 2s ease-out 0.5s forwards;
  }

  .scroller-fade-in {
    opacity: 0;
    transform: translateY(-20%);

    animation:
      fadeIn 1.5s ease-out 2s forwards,
      slideIntoPosition 1.5s ease-out 2s forwards;
  }
}

